--- a/where.html
+++ b/where.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 引入 Google Fonts 的 Inter 字體 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         /* 使用 Noto Sans TC 作為主要字體，Inter 作為備用 */
@@ -21,19 +21,19 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 text-gray-800 antialiased">
+<body class="bg-sky-50 text-slate-800 antialiased">
 
     <!-- 主容器 -->
     <div class="container mx-auto px-4 py-8 md:py-12">
 
         <!-- 頁面標題 -->
         <header class="text-center mb-10">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-800">ESPhome模組安裝位置</h1>
-            <p class="text-gray-600 mt-2">各廠牌冷氣機室內機安裝點參考</p>
+            <h1 class="text-3xl md:text-4xl font-bold text-sky-800 pt-8">ESPhome模組安裝位置</h1>
+            <p class="text-slate-600 mt-2">各廠牌冷氣機室內機安裝點參考</p>
         </header>
 
         <!-- 警語區塊 -->
-        <div class="mb-8 p-4 bg-red-100 border-l-4 border-red-500 text-red-700 rounded-lg shadow-md">
+        <div class="mb-8 p-4 bg-red-100 border-l-4 border-red-500 text-red-800 rounded-lg shadow-md">
             <p class="font-bold">重要提醒：</p>
             <p>如找不到插座請務必先加line詢問！切勿亂插以免模組或電器損壞！</p>
         </div>
@@ -44,8 +44,8 @@
             <!-- 卡片 1: 三菱電機 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold mb-3 text-gray-900">三菱電機</h2>
-                    <p class="text-gray-700 text-lg">
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">三菱電機</h2>
+                    <p class="text-slate-700 text-lg">
                         找到並連接至主機板上<span class="font-semibold text-red-700 bg-red-100 px-2 py-1 rounded-md mx-1">CN105</span>的紅色5-pin插座。
                     </p>
                 </div>
@@ -54,8 +54,8 @@
             <!-- 卡片 2: 三菱重工 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold mb-3 text-gray-900">三菱重工</h2>
-                    <p class="text-gray-700 text-lg">
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">三菱重工</h2>
+                    <p class="text-slate-700 text-lg">
                         找到並連接至主機板上標明<span class="font-semibold text-yellow-800 bg-yellow-100 px-2 py-1 rounded-md mx-1">CNS</span>的5-pin插座。
                     </p>
                 </div>
@@ -64,8 +64,8 @@
             <!-- 卡片 3: 國際壁掛 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold mb-3 text-gray-900">國際壁掛</h2>
-                    <p class="text-gray-600 mb-4">從正面看機器在機身右下角，有個白色塑膠蓋用螺絲固定，拆掉就能看到。</p>
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">國際壁掛</h2>
+                    <p class="text-slate-600 mb-4">從正面看機器在機身右下角，有個白色塑膠蓋用螺絲固定，拆掉就能看到。</p>
                 </div>
                 <img src="img/p.png" 
                      alt="國際壁掛插座位置" 
@@ -76,8 +76,8 @@
             <!-- 卡片 4: 日立吊隱 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold mb-3 text-gray-900">日立吊隱</h2>
-                    <p class="text-gray-600 mb-4">請參考"黑色"插座位置。</p>
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">日立吊隱</h2>
+                    <p class="text-slate-600 mb-4">請參考"黑色"插座位置。</p>
                 </div>
                 <img src="img/ht-ceiling.jpg" 
                      alt="日立吊隱插座位置" 
@@ -88,8 +88,8 @@
             <!-- 卡片 5: 日立壁掛 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold mb-3 text-gray-900">日立壁掛</h2>
-                    <p class="text-gray-600 mb-4">有兩種白色(CN30)或黑色(CN10)。</p>
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">日立壁掛</h2>
+                    <p class="text-slate-600 mb-4">有兩種白色(CN30)或黑色(CN10)。</p>
                 </div>
                 <img src="img/ht.jpg" 
                      alt="日立壁掛插座位置" 
@@ -100,9 +100,9 @@
         </main>
 
         <!-- 頁腳 -->
-        <footer class="text-center mt-12 text-gray-600 space-y-2">
+        <footer class="text-center mt-12 text-slate-600 space-y-2">
             <p>此頁面僅供參考，實際安裝請以各機型為準。</p>
-            <p>&copy; 2024 <a href="https://siot.cc" target="_blank" class="hover:underline text-indigo-600">Simon IoT</a>. All Rights Reserved.</p>
+            <p>&copy; 2024 <a href="https://siot.cc" target="_blank" class="hover:underline text-sky-700">Simon IoT</a>. All Rights Reserved.</p>
         </footer>
 
     </div>
