--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- 安裝位置參考 -->
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">安裝位置參考</h2>
-                <a href="where.html" target="_blank" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置參考照片</a>
+                <a href="where.html" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置參考照片</a>
             </div>
 
             <!-- 設定步驟 -->
@@ -128,7 +128,7 @@
 
         <!-- 頁腳 -->
         <footer class="text-center mt-8 text-slate-500 text-sm">
-            <p>&copy; 2024 <a href="https://siot.cc" target="_blank" class="hover:underline text-slate-600">Simon IoT</a>. All Rights Reserved.</p>
+            <p>&copy; 2024 <a href="https://siot.cc" class="hover:underline text-slate-600">Simon IoT</a>. All Rights Reserved.</p>
         </footer>
     </div>
 
