--- a/where.html
+++ b/where.html
@@ -102,7 +102,7 @@
         <!-- 頁腳 -->
         <footer class="text-center mt-12 text-slate-600 space-y-2">
             <p>此頁面僅供參考，實際安裝請以各機型為準。</p>
-            <p>&copy; 2024 <a href="https://siot.cc" target="_blank" class="hover:underline text-sky-700">Simon IoT</a>. All Rights Reserved.</p>
+            <p>&copy; 2025 <a href="https://siot.cc" class="hover:underline text-sky-700">Simon IoT</a>. All Rights Reserved.</p>
         </footer>
 
     </div>
