--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         </main>
 
         <!-- 頁腳 -->
-        <footer class="text-center mt-8 text-slate-500 text-sm">
-            <p>&copy; 2024 <a href="https://siot.cc" class="hover:underline text-slate-600">Simon IoT</a>. All Rights Reserved.</p>
+        <footer class="text-center mt-12 text-slate-600 space-y-2">
+            <p>&copy; 2025 <a href="https://siot.cc" class="hover:underline text-sky-700">Simon IoT</a>. All Rights Reserved.</p>
         </footer>
     </div>
 
