--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>ESPhome冷氣/除濕機模組使用說明</title>
     <!-- 引入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- 網站圖示 -->
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- 引入 Google Fonts 的 Inter 字體 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
