--- a/where.html
+++ b/where.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESPhome模組安裝位置</title>
+    <!-- 網站圖示 -->
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- 引入 Tailwind CSS 以進行快速且響應式的樣式設計 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 引入 Google Fonts 的 Inter 字體 -->
