--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESPhome冷氣/除濕機模組使用說明</title>
-    <!-- 引入 Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
     <!-- 網站圖示 -->
     <link rel="icon" href="img/favicon.png" type="image/png">
+    <!-- 引入 Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- 引入 Google Fonts 的 Inter 字體 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
     <div class="container mx-auto max-w-3xl p-4 sm:p-6 md:p-8">
         
         <!-- 主要標題 -->
-        <header class="text-center mb-8">
+        <header class="text-center my-8">
             <h1 class="text-3xl sm:text-4xl font-bold text-sky-700">ESPhome冷氣/除濕機模組</h1>
             <h2 class="text-2xl text-slate-700 mt-2">使用說明</h2>
         </header>
@@ -47,7 +47,7 @@
             <!-- 安裝位置參考 -->
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">安裝位置參考</h2>
-                <a href="where.html" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置參考照片</a>
+                <a href="where.html" target="_blank" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置參考照片</a>
             </div>
 
             <!-- 設定步驟 -->
@@ -111,7 +111,7 @@
             <!-- GitHub 資源 -->
             <div class="border-t border-slate-200 pt-6">
                 <h3 class="text-xl font-semibold text-slate-800">開發者資源</h3>
-                <p class="text-slate-600 mt-2">如有想要自行研究硬體，相關資料都分享在 GitHub 上：</p>
+                <p class="text-slate-600 mt-2">如有想要自行研究硬體與修改YAML，相關資料都分享在 GitHub 上：</p>
                 <div class="mt-4 space-y-3">
                     <p>國際、日立冷氣: <a href="https://github.com/xangin/TaiSEIA_ESPhome_samples/" target="_blank" class="text-sky-600 hover:underline">GitHub Repo</a></p>
                     <p>三菱重工: <a href="https://github.com/xangin/mhi-ac-ctrl-esp32-c3" target="_blank" class="text-sky-600 hover:underline">GitHub Repo</a></p>
@@ -128,9 +128,16 @@
 
         </main>
 
+        <!-- 頁腳回首頁按鈕 -->
+        <div class="text-center mt-8">
+            <a href="https://siot.cc" class="inline-block bg-sky-600 text-white font-semibold px-4 py-2 rounded-lg shadow hover:bg-sky-700 transition-colors">
+                &larr; 回首頁
+            </a>
+        </div>
+
         <!-- 頁腳 -->
-        <footer class="text-center mt-12 text-slate-600 space-y-2">
-            <p>&copy; 2025 <a href="https://siot.cc" class="hover:underline text-sky-700">Simon IoT</a>. All Rights Reserved.</p>
+        <footer class="text-center mt-6 text-slate-500 text-sm">
+            <p>&copy; 2024 <a href="https://siot.cc" target="_blank" class="hover:underline text-slate-600">Simon IoT</a>. All Rights Reserved.</p>
         </footer>
     </div>
 
