--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- 安裝位置參考 -->
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">安裝位置參考</h2>
-                <a href="where.html" target="_blank" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置參考照片</a>
+                <a href="where.html" target="_self" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置照片</a>
             </div>
 
             <!-- 設定步驟 -->
