--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <!-- 頁腳 -->
         <footer class="text-center mt-6 text-slate-500 text-sm">
-            <p>&copy; 2025 <a href="https://siot.cc" target="_blank" class="hover:underline text-slate-600">Simon IoT</a>. All Rights Reserved.</p>
+            <p>&copy; 2025 Simon IoT. All Rights Reserved.</p>
         </footer>
     </div>
 
