--- a/where.html
+++ b/where.html
@@ -101,10 +101,16 @@
 
         </main>
 
+        <!-- 頁腳回首頁按鈕 -->
+        <div class="text-center mt-8">
+            <a href="https://siot.cc" class="inline-block bg-sky-600 text-white font-semibold px-4 py-2 rounded-lg shadow hover:bg-sky-700 transition-colors">
+                &larr; 回首頁
+            </a>
+        </div>
+        
         <!-- 頁腳 -->
-        <footer class="text-center mt-12 text-slate-600 space-y-2">
-            <p>此頁面僅供參考，實際安裝請以各機型為準。</p>
-            <p>&copy; 2025 <a href="https://siot.cc" class="hover:underline text-sky-700">Simon IoT</a>. All Rights Reserved.</p>
+        <footer class="text-center mt-6 text-slate-500 text-sm">
+            <p>&copy; 2025 Simon IoT. All Rights Reserved.</p>
         </footer>
 
     </div>
