--- a/where.html
+++ b/where.html
@@ -103,8 +103,8 @@
 
         <!-- 頁腳回首頁按鈕 -->
         <div class="text-center mt-8">
-            <a href="https://siot.cc" class="inline-block bg-sky-600 text-white font-semibold px-4 py-2 rounded-lg shadow hover:bg-sky-700 transition-colors">
-                &larr; 回首頁
+            <a href="https://siot.cc/ac" target="_self" class="inline-block bg-sky-600 text-white font-semibold px-4 py-2 rounded-lg shadow hover:bg-sky-700 transition-colors">
+                &larr; 回上一頁
             </a>
         </div>
         
