--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                             <li><span class="font-bold text-blue-700">三菱重工</span>吊隱: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-mhi-ceiling</code></li>
                             <li>國際舊款冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-p-v2</code></li>
                             <li>日立舊款冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-h-v2</code></li>
+                            <li>日立全熱交換: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">erv-h</code></li>
                         </ul>
                     </li>
 
