--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <span class="font-semibold">辨識您的設備：</span>
                         <p class="ml-6 mt-1 text-slate-600">根據您的電器品牌，選擇對應的 Wi-Fi 熱點名稱：</p>
                         <ul class="list-disc list-inside ml-10 mt-2 space-y-1 text-slate-600">
-                            <li>國際牌冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-p</code></li>
+                            <li>國際冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-p</code></li>
                             <li>日立冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-h</code></li>
                             <li><span class="font-bold text-sky-700">三菱電機</span>冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-mt</code></li>
                             <li>日立除濕機: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">dehumidifier</code></li>
