--- a/where.html
+++ b/where.html
@@ -75,19 +75,31 @@
                      onerror="this.onerror=null;this.src='https://placehold.co/600x400/E5E7EB/4B5563?text=國際牌圖片'">
             </div>
 
-            <!-- 卡片 4: 日立吊隱 -->
+            <!-- 卡片 4: 日立吊隱-1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
-                    <h2 class="text-2xl font-bold mb-3 text-slate-900">日立吊隱</h2>
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">日立吊隱-1</h2>
                     <p class="text-slate-600 mb-4">請參考"黑色"插座位置。</p>
                 </div>
                 <img src="img/ht-ceiling.jpg" 
-                     alt="日立吊隱插座位置" 
+                     alt="日立吊隱插座位置2" 
                      class="w-full h-56 object-cover cursor-pointer enlargeable-image"
                      onerror="this.onerror=null;this.src='https://placehold.co/600x400/E5E7EB/4B5563?text=日立吊隱圖片'">
             </div>
 
-            <!-- 卡片 5: 日立壁掛 -->
+            <!-- 卡片 5: 日立吊隱-2 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                <div class="p-6">
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">日立吊隱-2</h2>
+                    <p class="text-slate-600 mb-4">部分型號吊隱插座會是這種形式。</p>
+                </div>
+                <img src="img/ht-ceiling-2.jpg" 
+                     alt="日立吊隱插座位置2" 
+                     class="w-full h-56 object-cover cursor-pointer enlargeable-image"
+                     onerror="this.onerror=null;this.src='https://placehold.co/600x400/E5E7EB/4B5563?text=日立吊隱圖片'">
+            </div>
+            
+            <!-- 卡片 6: 日立壁掛 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                 <div class="p-6">
                     <h2 class="text-2xl font-bold mb-3 text-slate-900">日立壁掛</h2>
