--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                             <li>國際舊款冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-p-v2</code></li>
                             <li>日立舊款冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-h-v2</code></li>
                             <li>日立全熱交換: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">erv-h</code></li>
+                            <li>大金冷氣: <code class="bg-slate-200 text-slate-800 px-2 py-1 rounded-md font-mono">climate-dk</code></li>
                         </ul>
                     </li>
 
