--- a/where.html
+++ b/where.html
@@ -111,6 +111,18 @@
                      onerror="this.onerror=null;this.src='https://placehold.co/600x400/E5E7EB/4B5563?text=日立壁掛圖片'">
             </div>
 
+            <!-- 卡片 7: 大金 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                <div class="p-6">
+                    <h2 class="text-2xl font-bold mb-3 text-slate-900">大金</h2>
+                    <p class="text-slate-600 mb-4">台灣常見這四種規格。</p>
+                </div>
+                <img src="img/daikin.jpg" 
+                     alt="大金插座位置" 
+                     class="w-full h-56 object-cover cursor-pointer enlargeable-image"
+                     onerror="this.onerror=null;this.src='https://placehold.co/600x400/E5E7EB/4B5563?text=大金插座圖片'">
+            </div>
+            
         </main>
 
         <!-- 頁腳回首頁按鈕 -->
