--- a/where.html
+++ b/where.html
@@ -39,9 +39,10 @@
             <p class="font-bold">重要提醒：</p>
             <p>如找不到插座請務必先加line詢問！切勿亂插以免模組或電器損壞！</p>
         </div>
-        <div class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 p-4 rounded-r-lg" role="alert">
+        <div class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 p-4 rounded-lg shadow-md" role="alert">
             <p class="font-bold">點擊圖片可放大</p>
         </div>
+        <br>
         <!-- 內容網格佈局 -->
         <main class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
