--- a/ult.html
+++ b/ult.html
@@ -67,7 +67,7 @@
                     <div class="grid grid-cols-4 sm:grid-cols-7 gap-3 sm:gap-4">
                         <!-- 7個圖片格子 (使用 placeholder) -->
                         <img src="img/pa-cable.jpg" alt="國際" class="gallery-img rounded-lg aspect-square object-cover w-full h-full cursor-pointer hover:opacity-75 transition-opacity shadow-md" onclick="openModal(this.src, '國際')">
-                        <img src="img/ht-calbe.jpg" alt="日立" class="gallery-img rounded-lg aspect-square object-cover w-full h-full cursor-pointer hover:opacity-75 transition-opacity shadow-md" onclick="openModal(this.src, '日立')">
+                        <img src="img/ht-cable.jpg" alt="日立" class="gallery-img rounded-lg aspect-square object-cover w-full h-full cursor-pointer hover:opacity-75 transition-opacity shadow-md" onclick="openModal(this.src, '日立')">
                         <img src="img/mh-cable.jpg" alt="三菱電機" class="gallery-img rounded-lg aspect-square object-cover w-full h-full cursor-pointer hover:opacity-75 transition-opacity shadow-md" onclick="openModal(this.src, '三菱電機')">
                         <img src="img/s403.jpg" alt="大金s403" class="gallery-img rounded-lg aspect-square object-cover w-full h-full cursor-pointer hover:opacity-75 transition-opacity shadow-md" onclick="openModal(this.src, '大金s403')">
                         <img src="img/s403mini.jpg" alt="大金s403mini" class="gallery-img rounded-lg aspect-square object-cover w-full h-full cursor-pointer hover:opacity-75 transition-opacity shadow-md" onclick="openModal(this.src, '大金s403mini')">
