--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 </div>
             </div>
             
+            <!-- 終極版使用說明 -->
+            <div>
+                <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">終極版介紹與說明</h2>
+                <a href="ult.html" target="_self" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看終極版使用說明</a>
+            </div>
+            
             <!-- 安裝位置參考 -->
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">安裝位置參考</h2>
