--- a/ult.html
+++ b/ult.html
@@ -109,17 +109,24 @@
                 
                 <div class="space-y-6 text-lg text-slate-700">
                     <p class="text-slate-600">
-                        在瀏覽器輸入裝置的 IP 位址。如果您不知道 IP，可以從 Home Assistant (HA) 中找到：
+                        在瀏覽器輸入裝置的 IP 位址。如果您不知道 IP，可以從 Home Assistant (HA) 中找到(如下圖)：
                         <br>
                         <span class="font-semibold text-slate-800">HA &gt; 設定 &gt; 裝置與服務 &gt; ESPhome &gt; 選擇該模組</span>後，點擊「<span class="font-semibold text-sky-600">造訪</span>」即可連到裝置 IP。
                     </p>
 
-                    <!-- 圖片佔位符 --><div class="my-6">
-                        <!-- 圖片 1.png 的佔位符 --><img src="img/fwchange.png" alt="ESPhome 韌體變更介面" class="rounded-lg shadow-md w-full">
+                    <!-- 圖片佔位符 -->
+                    <div class="my-6">
+                        <!-- 圖片的佔位符 --><img src="img/visit.png" alt="ESPhome裝置介面示意圖" class="rounded-lg shadow-md w-full">
+                        <p class="text-center text-sm text-slate-500 mt-2">ESPhome裝置介面示意圖</p>
+                    </div>
+                    <p></p>
+                    <!-- 圖片佔位符 -->
+                    <div class="my-6">
+                        <!-- 圖片的佔位符 --><img src="img/fwchange.png" alt="ESPhome 韌體變更介面" class="rounded-lg shadow-md w-full">
                         <p class="text-center text-sm text-slate-500 mt-2">韌體變更網頁介面示意圖</p>
                     </div>
 
-                    <p class="text-slate-600">在網頁中（如上圖），請依照下列步驟變更韌體：</p>
+                    <p class="text-slate-600">在裝置IP網頁中（如上圖），請依照下列步驟變更韌體：</p>
 
                     <ol class="list-decimal list-inside space-y-5">
                         <li>
