--- a/ult.html
+++ b/ult.html
@@ -120,8 +120,8 @@
                     </div>
                     <p class="text-slate-600">
 <span class="font-semibold text-slate-800">HA &gt; 設定 &gt; 裝置與服務 &gt; ESPhome &gt; 選擇該模組</span>後，點擊「<span class="font-semibold text-sky-600">造訪</span>」即可連到裝置 IP。
-                        
                     </p>
+                    <br>
                     <!-- 圖片佔位符 -->
                     <div class="my-6">
                         <!-- 圖片的佔位符 --><img src="img/fwchange.png" alt="ESPhome 韌體變更介面" class="rounded-lg shadow-md w-full">
@@ -137,12 +137,12 @@
                         </li>
                         <li>
                             <span class="font-semibold">執行變更：</span>
-                            <p class="ml-6 mt-1 text-slate-600">按下執行變更的按鈕「<span class="font-bold bg-sky-600 text-white px-3 py-1 rounded-md shadow">PRESS</span>」。</p>
+                            <p class="ml-6 mt-1 text-slate-600">按下「執行變更」右方的<span class="font-bold bg-sky-600 text-white px-3 py-1 rounded-md shadow">PRESS</span>按鈕。</p>
                         </li>
                         <li>
                             <span class="font-semibold">耐心等待：</span>
                             <p class="ml-6 mt-1 text-slate-600">
-                                「韌體狀態」文字會依序顯示：
+                                按下按鈕後，「韌體狀態」文字會依序顯示：
                                 <br>
                                 <code class="bg-blue-100 text-blue-800 px-2 py-1 rounded-md font-mono">OTA START</code> &rarr;
                                 <code class="bg-yellow-100 text-yellow-800 px-2 py-1 rounded-md font-mono">OTA RUNNING</code> &rarr;
