--- a/ult.html
+++ b/ult.html
@@ -115,7 +115,7 @@
 
                     <!-- 圖片佔位符 -->
                     <div class="my-6">
-                        <!-- 圖片的佔位符 --><img src="img/visit.png" alt="ESPhome裝置介面示意圖" class="rounded-lg shadow-md w-full">
+                        <!-- 圖片的佔位符 --><img src="img/visit.png" alt="ESPhome裝置介面示意圖" class="rounded-lg shadow-md">
                         <p class="text-center text-sm text-slate-500 mt-2">ESPhome裝置介面示意圖</p>
                     </div>
                     <p class="text-slate-600">
@@ -124,7 +124,7 @@
                     <br>
                     <!-- 圖片佔位符 -->
                     <div class="my-6">
-                        <!-- 圖片的佔位符 --><img src="img/fwchange.png" alt="ESPhome 韌體變更介面" class="rounded-lg shadow-md w-full">
+                        <!-- 圖片的佔位符 --><img src="img/fwchange.png" alt="ESPhome 韌體變更介面" class="rounded-lg shadow-md ">
                         <p class="text-center text-sm text-slate-500 mt-2">韌體變更網頁介面示意圖</p>
                     </div>
 
