--- a/index.html
+++ b/index.html
@@ -45,22 +45,23 @@
             </div>
             
             <!-- 終極版使用說明 -->
-            <div>
-                <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">終極版介紹與說明</h2>
-                <a href="ult.html" target="_self" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看終極版使用說明</a>
-            </div>
+            <div class="border-b border-slate-200 pb-3 flex items-baseline flex-wrap">
+                <h2 class="text-2xl font-bold text-slate-900 mr-3">終極版介紹與說明:</h2>
+                <a href="hk.html" target="_self" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看終極版使用說明</a>
+            </div>               
 
             <!-- HK版使用說明 -->
-            <div>
-                <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">HK版介紹與說明</h2>
+            <div class="border-b border-slate-200 pb-3 flex items-baseline flex-wrap">
+                <h2 class="text-2xl font-bold text-slate-900 mr-3">HK版介紹與說明:</h2>
                 <a href="hk.html" target="_self" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看HK版使用說明</a>
-            </div>
+            </div>              
             
             <!-- 安裝位置參考 -->
-            <div>
-                <h2 class="text-2xl font-bold text-slate-900 mb-4 border-b border-slate-200 pb-3">安裝位置參考</h2>
+            <div class="border-b border-slate-200 pb-3 flex items-baseline flex-wrap">
+                <h2 class="text-2xl font-bold text-slate-900 mr-3">安裝位置參考:</h2>
                 <a href="where.html" target="_self" class="text-sky-600 hover:text-sky-700 hover:underline text-lg">點此查看各品牌冷氣安裝位置照片</a>
-            </div>
+            </div>            
+
 
             <!-- 設定步驟 -->
             <div>
