--- a/hk.html
+++ b/hk.html
@@ -45,7 +45,7 @@
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-6 border-b border-slate-200 pb-3">產品介紹</h2>
                 <div class="space-y-6 text-lg text-slate-700">
-                    <p class="text-slate-600">本模組除了可接 Home Assistant (HA) 外，還多了能直連 HomeKit 的功能，目前支援國際、日立、大金及三菱電機空調。</p>
+                    <p class="text-slate-600">本模組除了可透過ESPhome接入 Home Assistant (HA) 外，還多了能直連 HomeKit 的功能，目前支援國際、日立、大金及三菱電機空調。</p>
                     
                     <p class="mt-4 text-slate-600">在裝置的 IP 頁面能看到 HomeKit 配對碼以及重設配對的按鈕。</p>
                     <img src="img/web_hkcode.png" alt="裝置IP頁面顯示HomeKit配對碼" class="mt-2 rounded-lg shadow-md max-w-sm mx-auto w-full border border-slate-200" >
