--- a/hk.html
+++ b/hk.html
@@ -149,6 +149,27 @@
                     </li>
                 </ol>
             </div>
+
+            <!-- 購買連結區塊 -->
+            <div class="mt-8 bg-gradient-to-br from-sky-50 to-white border-2 border-sky-100 rounded-xl p-6 text-center shadow-sm">
+                <h3 class="text-2xl font-bold text-slate-800 mb-3">立即購買</h3>
+                
+                <!-- 說明提示 -->
+                <div class="bg-yellow-50 text-yellow-800 text-sm sm:text-base py-2 px-4 rounded-lg inline-block mb-4 border border-yellow-100">
+                    <span class="font-bold mr-1">🔔 下單提醒：</span>
+                    此賣場連結沒有問題，請依照廠牌選擇對應名稱，安心下單。
+                </div>
+
+                <br>
+
+                <a href="https://famistore.famiport.com.tw/famistore/users/239261/merchandises/691adf08240f36870f5c9a62" target="_blank" class="group inline-flex items-center justify-center px-8 py-3 text-lg font-bold text-white transition-all duration-200 bg-sky-600 rounded-full hover:bg-sky-700 hover:shadow-lg hover:-translate-y-0.5">
+                    前往全家好賣+ 下單
+                    <svg class="w-5 h-5 ml-2 transform group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                    </svg>
+                </a>
+                <p class="text-slate-400 text-xs mt-3">點擊將開啟新視窗前往賣場</p>
+            </div>
             
             <!-- 聯絡方式 -->
             <div class="text-center border-t border-slate-200 pt-6">
